Fix FortuneWheel z-index issue

--- a/src/Components/Tournaments/FortuneWheel/styles.module.scss
+++ b/src/Components/Tournaments/FortuneWheel/styles.module.scss
@@ -6,7 +6,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 5;
+    z-index: 4;
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(12px);
 
